release_strategy/vote-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: vote
spec: 
  replicas: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 4 
      maxUnavailable: 2 
  revisionHistoryLimit: 4
  paused: false
  minReadySeconds: 20
  selector: 
    matchLabels: 
      role: vote
    matchExpressions: 
      - {key: version, operator: In, values: [v1, v2, v3]}
  template: 
    metadata:
      name: vote
      labels:
        app: python
        role: vote
        version: v1
    spec:
      containers:
        - name: app
          image: schoolofdevops/vote:v1
          ports:
            - containerPort: 80
              protocol: TCP
